Posting answers to /answers.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -41,6 +41,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href='@routes.Assets.at("styles/main.css")' x-href="styles/main.css">
+    <link rel="stylesheet" href='@routes.Assets.at("styles/buddy.css")' x-href="styles/main.css">
     <!-- endbuild -->
   </head>
   <body ng-app="moonBuddyApp">
