OOPS: Adding new users now correctly adds name too.

--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -16,6 +16,10 @@
 
   <h2>Add a new user:</h2>
   <p>
+    <label for="Name">Name:</label>
+    <input type="text" id="name" ng-model="user.name" />
+  </p>
+  <p>
     <label for="username">Username:</label>
     <input type="text" id="username" ng-model="user.username" /> @moonfruit.com
   </p>
