Added accommodation question.

--- a/public/styles/buddy.css
+++ b/public/styles/buddy.css
@@ -4,7 +4,51 @@
 }
 
 .value {
+    display: inline-block;
     font-size: 24px;
+}
+
+.image {
+    width: 130px;
+    height: 130px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.image.test-q1 {
+    background: url('/assets/images/live.png');
+}
+
+.image.test-q1.ans0 {
+    background-position: 0 0;
+}
+
+.image.test-q1.ans1 {
+    background-position: -138px 0;
+}
+
+.image.test-q1.ans2 {
+    background-position: -277px 0;
+}
+
+.image.test-q1.ans3 {
+    background-position: -416px 0;
+}
+
+.image.test-q1.ans4 {
+    background-position: -555px 0;
+}
+
+.image.test-q1.ans5 {
+    background-position: -693px 0;
+}
+
+.image.test-q1.ans6 {
+    background-position: -832px 0;
+}
+
+.image.test-q1.ans7 {
+    background-position: -971px 0;
 }
 
 .nodots {
