--- a/public/views/main.html
+++ b/public/views/main.html
@@ -30,7 +30,8 @@
       <p>{{ question.text }}</p>
       <p class="explanation">{{ question.scaleExplain }}</p>
       <p class="half"><input type="range" max="{{ question.scaleTo }}" min="{{ question.scaleFrom }}" value="0" ng-model="question.value" ng-init="question.value=0" /></p>
-      <p class="half value">{{ question.value }}</p>
+      <p class="value">{{ question.value }}</p>
+      <p class="image {{ question.id }} ans{{ question.value }}"></p>
 
       <button ng-click="submitAnswers(question.id, question.value)">Submit</button>
 
