--- a/public/views/main.html
+++ b/public/views/main.html
@@ -25,18 +25,23 @@
     <input type="text" id="department" ng-model="user.department" />
   </p>
 -->
-  <ul>
-    <li ng-repeat="question in questions" class="row-fluid">
-      <p>{{ question.text }}</p>
+  <ul class="push-down no-pad-left">
+    <li ng-repeat="question in questions" class="row-fluid nodots">
+      <h3>{{ question.text }}</h3>
+
       <p class="explanation">{{ question.scaleExplain }}</p>
+
       <p class="half">
         <input type="range" max="{{ question.scaleTo }}" min="{{ question.scaleFrom }}" 
                value="0" ng-model="question.value" ng-init="question.value=0" step="0.1" />
       </p>
+
       <p class="value">{{ question.value }}</p>
+
       <p class="image {{ question.id }} ans{{ ('' + question.value).substr(0,1) }}"></p>
 
-      <button ng-click="submitAnswers(question.id, question.value)">Submit</button>
+      <button class="submit" 
+              ng-click="submitAnswers(question.id, question.value)">Submit</button>
 
     </li>
   </ul>
