--- a/public/styles/buddy.css
+++ b/public/styles/buddy.css
@@ -9,13 +9,33 @@
     width: 40px;
 }
 
-.image {
-    width: 130px;
-    height: 130px;
-    display: inline-block;
-    vertical-align: middle;
-    border-radius: 7px;
-/*    box-shadow: 1px 1px 7px grey; */
+.image img{
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+
+input[type="range"]{
+    -webkit-appearance:none;
+    -moz-apperance:none;
+    width:100%;
+    height:4px;
+    background-color: grey;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.rangeslider input::-webkit-slider-thumb{
+    -webkit-appearance:none;
+    -moz-apperance:none;
+    width:0px;
+    height:0px;
+    border: 0;
+    border-bottom: 30px solid #00b196;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fefefe), color-stop(0.49, #dddddd), color-stop(0.51, #d1d1d1), color-stop(1, #a1a1a1) );
 }
 
 .image.test-q1 {
@@ -71,5 +91,10 @@
 }
 
 .submit {
-    margin-left: 20px;
+}
+
+.bottom-border {
+    border-bottom: 1px dotted grey;
+    width: 480px;
+    margin: 20px auto 40px;
 }
