--- a/public/views/existing.html
+++ b/public/views/existing.html
@@ -4,13 +4,12 @@
     <li class="active"><a ng-href="#/existing">Existing User</a></li>
     <li><a ng-href="#/admin">Admin</a></li>
   </ul>
+  <img src="/assets/images/moonfruit_logo.png" class="logo" />
   <h3 class="text-muted">MoonBuddy</h3>
 </div>
 
 <div class="row marketing">
-  <h2>
-    Users
-  </h2>
+  <h2>Users</h2>
   <table class="user-table">
     <tr>
       <th>Name</th>
