--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,6 +4,7 @@
     <li><a ng-href="#/existing">Existing User</a></li>
     <li><a ng-href="#/admin">Admin</a></li>
   </ul>
+  <img src="/assets/images/moonfruit_logo.png" class="logo" />
   <h3 class="text-muted">MoonBuddy</h3>
 </div>
 
