Users can now edit answers.

--- a/public/views/user.html
+++ b/public/views/user.html
@@ -22,7 +22,7 @@
     <tr>
     <tr>
       <td>{{ user.name }}</td>
-      <td>{{ user.id }}</td>
+      <td><a href="#user/{{ user.id }}/answers">{{ user.id }}</a></td>
       <td>{{ user.team }}</td>
       <td>{{ user.department }}</td>
     </tr>
